# VoxelGame

./: CMakeLists.txt  README.md
Dependencies/glew/: glew.pc
VoxelGame/: CMakeLists.txt  VoxelGame.cpp  VoxelGame.h
src/: CMakeLists.txt  VoxelGame.cpp
src/Renderer/: GLError.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h
src/Renderer/Shaders/: basic.frag  basic.vert
