# CMakeList.txt : CMake project for VoxelGame, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (VoxelGame "VoxelGame.cpp" "VoxelGame.h")

# TODO: Add tests and install targets if needed.
